<resources>
    <string name="app_name">t411 companion</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">t411 companion</string>
    <string name="main_login">Username</string>
    <string name="main_password">Password</string>
    <string name="main_connect">Save</string>
    <string name="description_logo">t411.ch logo</string>
    <string name="service_settings">Settings</string>
    <string name="button_mail">Inbox</string>
    <string name="button_service">Settings</string>
    <string name="button_useraccount">User account</string>
    <string name="toggle_ON">ON</string>
    <string name="toggle_OFF">OFF</string>
    <string name="chk_ratioAlert">Ratio alert</string>
    <string name="chk_lowLimit">Low limit</string>
    <string name="chk_msgAlert">Message alert</string>
    <string name="msgAlertEnabled">Enabled</string>
    <string name="msgAlertDisabled">Disabled</string>
    <string name="active">Enable</string>
    <string name="default_username">Username</string>
    <string name="lastUpdate">"Last update : "</string>
    <string name="savedData">Saved.</string>
    <string name="btnStartService">(Re)start service</string>
    <string name="about">About…</string>
    <string name="description_ratioAlert">Notify if ratio is lower than the fixed limit.</string>
    <string name="description_mailAlert">Notify on new message.</string>
    <string name="repeatTime">Frequency (mn)</string>
    <string name="description_frequency">Define interval between updates. Warning : lower value
        means higher battery use…
    </string>
    <string name="show_notifs">System notifications</string>
    <string name="WhatToDo">Choose an action</string>
    <string name="open_app">Open app</string>
    <string name="update_now">Update now</string>
    <string name="read_mails">Inbox</string>
    <string name="goto_t411">Browse t411.ch</string>
    <string name="widget_action">Widget action…</string>
    <string name="answer">Answer</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="notif_update">Updating…</string>
    <string name="notif_upd_title">Upading</string>
    <string name="notif_upd_content">Downloading data…</string>
    <string name="notif_message">New messages</string>
    <string name="notif_msg_title">You have new messages on t411</string>
    <string name="notif_msg_content">Touch to read</string>
    <string name="notif_ratio">Low ratio</string>
    <string name="notif_ratio_title">Your ratio is low</string>
    <string name="notif_ratio_content">Touch to configure</string>
    <string name="waiting_for_update">Waiting for update…</string>
    <string name="askWhatToDo">Always ask</string>
    <string name="ChooseAction">Chose action</string>
    <string name="pleasewait">Please wait</string>
    <string name="getMesages">Getting messages list…</string>
    <string name="getMesageContent">Getting message content…</string>
    <string name="donate">Buy me a beer ! ;o)</string>
    <string name="donateWarning">Note that the money will go to the developer, not the website.</string>
    <string name="considerDonate">Enjoy the app? consider donating € 1 !</string>
    <string name="appwidget_huge">t411 Clock</string>
    <string name="appwidget_full">t411 companion (t411)</string>
    <string name="appwidget_half">t411 companion (mini)</string>
    <string name="appwidget_nano">t411 companion (1x1)</string>
    <string name="appwidget_plus">t411 companion (android)</string>
    <string name="dateFormat">"EEE LLLL d"</string>
    <string name="DownloadLeft">before low ratio.</string>
    <string name="UploadLeft">to seed before wished ratio.</string>
    <string name="statistics">My statistics</string>
    <string name="noConError">t411 app is not able to reach Internet…</string>
    <string name="title_search">Torrent download</string>
    <string name="launcher_messages">t411 PM</string>
    <string name="appwidget_search">t411 search widget</string>
    <string name="placeholder_search">Search…</string>
    <string name="search_cat_all">All categories</string>
    <string name="search_cat_audio">Audio</string>
    <string name="search_cat_eBooks">eBooks</string>
    <string name="search_cat_videogames">Video Games</string>
    <string name="search_cat_GPS">GPS</string>
    <string name="search_cat_movies">Films/Videos</string>
    <string name="search_cat_applications">Applications</string>
    <string name="messages_compose">Compose</string>
    <string name="messages_compose_to">To :</string>
    <string name="messages_compose_subject">Subject :</string>
    <string name="messages_compose_message">Message :</string>
    <string name="messages_compose_send">Send</string>
    <string name="settings_caption_service">Service settings</string>
    <string name="settings_caption_general">General settings</string>
    <string name="settings_caption_other">Other settings</string>
    <string name="settings_only_wifi">Update only on Wifi network</string>
    <string name="settings_wifi_only_details">Perform updates only when connected to a Wifi network
        (saves DATA plan)
    </string>
    <string name="settings_caption_development">Development settings</string>
    <string name="settings_caption_useraccount">User account</string>
    <string name="settings_useraccount_details">Please double-check your credentials : no
        verification will be made.
    </string>
    <string name="user_manual">User manual</string>
    <string name="news_widget">t411 News</string>
    <string name="Share">Share</string>
    <string name="calculator">Calculator</string>
    <string name="settings_RTC">Do not update in standby mode</string>
    <string name="settings_RTC_details">Use RTC alarm instead of RTC_WAKEUP to perform updates. This
        increase battery life, but does not respect the refresh rate.
    </string>
    <string name="settings_use_https">Use HTTPS</string>
    <string name="target_ratio">Target Ratio</string>
    <string name="download_redirect">Redirect to website</string>
    <string name="description_downloadredirect">Open the .torrent\'s URL using the default internet
        browser. Consider this if the method above does not work on your phone.
    </string>
    <string name="connect">Connect</string>
    <string name="please_login">First of all, you should login using your t411.ch credentials…
    </string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="save_path">Save path</string>
    <string name="useNotificationWidget">Notification widget</string>
    <string name="useNotificationWidget_description">Display the current status of your t411
        account in the notification area.
    </string>
    <string name="my_friends">My friends</string>
    <string name="my_uploads">My uploads</string>
    <string name="settings_caption_useraccount_summary">t411 account credentials</string>
    <string name="main_login_summary">t411 login</string>
    <string name="main_password_summary">t411 password</string>
    <string name="settings_caption_connection">Connection settings</string>
    <string name="settings_caption_connection_summary">Set connection settings to t411 server</string>
    <string name="settings_use_https_summary_on">Encrypt data</string>
    <string name="settings_use_https_summary_off">Do not encrypt data</string>
    <string name="notification_settings">Notification settings</string>
    <string name="auto_update">Auto-update</string>
    <string name="auto_update_summary">Configure automatic data updates</string>
    <string name="frequency">Update frequency</string>
    <string name="search_and_download">Search &amp; Downloads</string>
    <string name="lowRatio_summary">Set low-ratio limit (default is 1.00)</string>
    <string name="targetRatio_summary">Set the target ratio</string>
    <string name="download">Download</string>
    <string name="widgets_settings">Configure widgets</string>
    <string name="widgets_settings_summary">Set the action to perform on widget click</string>
    <string name="open_after_dl">Open torrent after download</string>
    <string name="description_open_after_dl">Open the file automatically once it\'s fully downloaded, with no notification.</string>
    <string name="open_after_dl_cancelNotify">Clear notification</string>
    <string name="description_open_after_dl_cancelNotify">Disable the "Download finished" notification</string>
    <string name="misc">Misc.</string>
    <string name="search_results">Search results</string>
    <string name="settings_addMime">Force MIME type</string>
    <string name="description_settings_addMime">Force torrent MIME type when opening a torrent file through the app</string>
    <string name="share_direct_link">Share torrent link</string>
    <string name="description_share_direct_link">Share the direct link to a torrent instead of its presentation page (needs your recipient to be logged in to t411).</string>
    <string name="sort_by_date">Sort torrents by date</string>
    <string name="description_sort_by_date">If checked, torrents list in search, today, … will be sorted by date instead by name.</string>
    <string name="enable_service">Enable anti-censorship</string>
    <string name="enable_service_summary">Enable dedicated proxy or discover alternatives</string>
    <string name="future_downloads">My future downloads</string>
    <string name="preference_appLogs">Log app usage</string>
    <string name="preference_appLogs_summary">Record app usage to log files, that you can send to the developer on case of problems</string>
    <string name="sendLogs">Send logs</string>
    <string name="sendLogs_summary">Send today\'s log to the developer, attached to an e-mail</string>
    <string name="settings_caption_logging">Logging</string>
    <string name="settings_caption_logging_summary">Enable debug logging to help developer in troubleshooting</string>
    <string name="settings_proxy_screen">Proxy settings</string>
    <string name="settings_proxy_screen_summary">Set your proxy settings</string>
    <string name="settings_proxy_host_title">Proxy Host</string>
    <string name="settings_proxy_host_summary">Set hostname or IP address</string>
    <string name="settings_proxy_port_title">Proxy Port</string>
    <string name="settings_proxy_port_summary">For security reasons, to avoid users use any free and unsecure proxy, the only allowed port is the 411</string>
    <string name="settings_proxy_login_title">Proxy login</string>
    <string name="settings_proxy_password_title">Proxy Password</string>
    <string name="settings_proxy_user_title">Use proxy</string>
    <string name="settings_proxy_user_summary">Enable use of your own proxy</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_advanced">Advanced settings</string>
    <string name="you_can_edit_in_settings">You can change this later in app\'s settings</string>
    <string name="btn_done">Done</string>
    <string name="wlcm_last_message">Thanks for using my app ! You\'re now ready to go by yourself.\n\nPlease note that this assistant might show up again in the future, in case of new feature.</string>
    <string name="wlcm_rate_app">Rate me on the Play Store !</string>
    <string name="settings_custom_domain_summary">Choose manually t411\'s address</string>
    <string name="settings_custom_domain_title">Choose domain</string>
    <string name="settings_custom_domain_warning">Caution : this will OVERRIDE the default domain, even if the developer updates the defaults.</string>
</resources>