<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_general">

        <!-- Compte utilisateur -->
    <PreferenceScreen
        android:persistent="false"
        android:summary="@string/settings_caption_useraccount_summary"
        android:title="@string/settings_caption_useraccount">
        <PreferenceCategory android:title="@string/connect">
            <EditTextPreference
                android:key="login"
                android:summary="@string/main_login_summary"
                android:title="@string/main_login" />
            <EditTextPreference
                android:key="password"
                android:password="true"
                android:summary="@string/main_password_summary"
                android:title="@string/main_password" />
        </PreferenceCategory>
        <PreferenceCategory android:title="Ratio">
            <EditTextPreference
                android:defaultValue="1.00"
                android:key="ratioMinimum"
                android:numeric="decimal"
                android:summary="@string/lowRatio_summary"
                android:title="Ratio Min." />
            <EditTextPreference
                android:defaultValue="1"
                android:key="ratioCible"
                android:numeric="decimal"
                android:summary="@string/targetRatio_summary"
                android:title="@string/target_ratio" />
        </PreferenceCategory>

    </PreferenceScreen>

    </PreferenceCategory>

    <!-- Mise  à jour -->
    <PreferenceScreen
        android:summary="@string/auto_update_summary"
        android:title="@string/auto_update">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoUpdate"
            android:summary="@string/auto_update_summary"
            android:title="@string/auto_update" />
        <EditTextPreference
            android:defaultValue="120"
            android:key="updateFreq"
            android:numeric="integer"
            android:summary="@string/description_frequency"
            android:title="@string/frequency" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="rtcMode"
            android:summary="@string/settings_RTC_details"
            android:title="@string/settings_RTC" />

    </PreferenceScreen>

    <!-- Notifications -->
    <PreferenceScreen
        android:summary="@string/notification_settings"
        android:title="Notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ratioAlert"
            android:summary="@string/description_ratioAlert"
            android:title="@string/chk_ratioAlert" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="mailAlert"
            android:summary="@string/description_mailAlert"
            android:title="@string/chk_msgAlert" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="notificationWidget"
            android:summary="@string/useNotificationWidget_description"
            android:title="@string/useNotificationWidget" />
    </PreferenceScreen>

    <!-- Widgets -->
    <PreferenceScreen
        android:summary="@string/widgets_settings"
        android:title="Widgets">
        <ListPreference
            android:entries="@array/widget_actions"
            android:entryValues="@array/widget_actions"
            android:key="widgetAction"
            android:summary="@string/widgets_settings_summary"
            android:title="@string/widget_action" />
    </PreferenceScreen>

    <!-- Téléchargement -->
    <PreferenceScreen
        android:title="@string/search_and_download">
        <PreferenceCategory android:title="@string/search_results">

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="hadopi"
                android:summary="Afficher un avertissement Hadopi en haut de la fiche de présentation du torrent si plusieurs commentaires en parlent. Disparait au clic sur le bandeau."
                android:title="Avertissement hadopi" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="shareDirectLink"
                android:summary="@string/description_share_direct_link"
                android:title="@string/share_direct_link" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="sortByDate"
                android:summary="@string/description_sort_by_date"
                android:title="@string/sort_by_date" />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/download">

            <Preference
                android:key="savePath"
                android:enabled="false"
                android:summary="[SDCARD]/Torrents t411/"
                android:title="@string/save_path" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="openAfterDl"
                android:summary="@string/description_open_after_dl"
                android:title="@string/open_after_dl" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="openAfterDl"
                android:key="openAfterDlCancelNotify"
                android:summary="@string/description_open_after_dl_cancelNotify"
                android:title="@string/open_after_dl_cancelNotify" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:enabled="false"
                android:key="addMimeType"
                android:summary="@string/description_settings_addMime"
                android:title="@string/settings_addMime" />

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/misc">

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="dlModeRedirect"
                android:summary="@string/description_downloadredirect"
                android:title="@string/download_redirect" />

        </PreferenceCategory>


    </PreferenceScreen>


    <PreferenceCategory android:title="@string/preference_category_advanced">

        <!-- Connexion -->
        <PreferenceScreen
            android:summary="@string/settings_caption_connection_summary"
            android:title="@string/settings_caption_connection">

            <EditTextPreference
                android:key="custom_domain"
                android:dialogMessage="@string/settings_custom_domain_warning"
                android:summary="@string/settings_custom_domain_summary"
                android:title="@string/settings_custom_domain_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="useHTTPS"
                android:summaryOff="@string/settings_use_https_summary_off"
                android:summaryOn="@string/settings_use_https_summary_on"
                android:title="@string/settings_use_https" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="wifiOnly"
                android:summary="@string/settings_wifi_only_details"
                android:title="@string/settings_only_wifi" />

            <PreferenceScreen
                android:enabled="true"
                android:summary="@string/settings_proxy_screen_summary"
                android:title="@string/settings_proxy_screen">

                <Preference
                    android:key="option_proxy"
                    android:summary="@string/enable_service_summary"
                    android:title="@string/enable_service" />

                <CheckBoxPreference
                    android:key="userProxy"
                    android:summary="@string/settings_proxy_user_summary"
                    android:title="@string/settings_proxy_user_title" />

                <EditTextPreference
                    android:dependency="userProxy"
                    android:key="customProxy"
                    android:summary="@string/settings_proxy_host_summary"
                    android:title="@string/settings_proxy_host_title" />

                <Preference
                    android:enabled="false"
                    android:summary="@string/settings_proxy_port_summary"
                    android:title="@string/settings_proxy_port_title" />

                <EditTextPreference
                    android:dependency="userProxy"
                    android:key="proxy_login"
                    android:title="@string/settings_proxy_login_title" />

                <EditTextPreference
                    android:dependency="userProxy"
                    android:key="proxy_pasword"
                    android:password="true"
                    android:title="@string/settings_proxy_password_title" />


            </PreferenceScreen>
<!--
            <PreferenceScreen
                android:enabled="true"
                android:summary="@string/settings_caption_connection_advanced_summary"
                android:title="@string/settings_caption_connection_advanced">


                <EditTextPreference
                    android:defaultValue="Android (Compagnon t411 internal browser)"
                    android:key="User-Agent"
                    android:summary="Définir le User-Agent utilisé par le navigateur interne"
                    android:title="User-Agent" />

                <EditTextPreference
                    android:defaultValue="10"
                    android:key="timeoutValue"
                    android:numeric="integer"
                    android:summary="Définir le délai avant l'abandon de le connexion"
                    android:title="Timeout" />

            </PreferenceScreen>
    -->

        </PreferenceScreen>

        <PreferenceScreen
            android:persistent="false"
            android:summary="@string/settings_caption_logging_summary"
            android:title="@string/settings_caption_logging">
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="appLogs"
                android:summary="@string/preference_appLogs_summary"
                android:title="@string/preference_appLogs" />
            <Preference
                android:dependency="appLogs"
                android:key="sendLogs"
                android:summary="@string/sendLogs_summary"
                android:title="@string/sendLogs" />
        </PreferenceScreen>

        <Preference android:title="@string/settings_declare_bug"
            android:summary="@string/settings_summary_declare_bug">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/meyergre/Compagnont411.me/issues" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>