<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/clouds"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_login"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/t411_action_blue" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1">

        <include
            layout="@layout/include_loginform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/autoupdate" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/t411_action_blue"
                android:textSize="12sp"
                android:text="@string/auto_update"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/you_can_edit_in_settings"
        android:textSize="12sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/t411_action_blue" />

    <Button
        android:enabled="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:layout_gravity="center_horizontal"
        android:drawableRight="@drawable/ic_chevron"
        android:layout_weight="0"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/t411_blue"
        android:onClick="onLogin" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="24dp" />
</LinearLayout>