<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/clouds"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wlcm_last_message"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/t411_action_blue_darker"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wlcm_rate_app"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:onClick="onRateOnPlaystore"
            android:textColor="@color/t411_action_blue_darker"
            android:gravity="center" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRateOnPlaystore"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_done"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@color/t411_blue"
        android:onClick="onFinish" />
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="24dp" />
</LinearLayout>